--- a/app/app.yaml
+++ b/app/app.yaml
@@ -4,3 +4,7 @@ entrypoint: gunicorn -b :$PORT main:app
 
 runtime_config:
   python_version: 3
+
+endpoints_api_service:
+  name: encoded-net-317015.appspot.com
+  rollout_strategy: managed
